
Sun Jan 3 16:08:47 1999 Simon Hausmann <tronical@gmx.net>

        * improved QPicture stuff (though frame still don't work -> khtml crashes :(

        * KoHTML now uses KIO to receive it's data :-D

        * started settings dialog (but it's not used yet)

Wed Jan 6 01:15:58 1999 Simon Hausmann <tronical@gmx.net>

        * making use of the scale value when drawing

        * fixes with the KIO-handling

Wed Jan 6 22:00:41 1999 Simon Hausmann <tronical@gmx.net>

        * implemented mini html-editor

        * improved settings dialog

        * implemented basic configuration stuff

        * improved KIO-handling again (error handling)

        * improved some drawing stuff

Thu Jan 7 18:56:56 1999 Simon Hausmann <tronical@gmx.net>

        * _tons_ of fixes with the KIO handling

        * started on support for redirection (I actually couldn't test it, yet, I hope it works :)

        * the stop button works now (added two KOM signals to KoHTMLDocument)

        * code cleanups (separated KoHTMLJob)

Sun Jan 10 21:30:09 1999 Simon Hausmann <tronical@gmx.net>

        * fixes

        * embedded children documents are now painted, too (when KoHTMLDoc::draw() gets called)

        * started work on addBookmark() and advanced save/load mode (both not working, yet)

Wed Jan 13 18:36:53 1999 Simon Hausmann <tronical@gmx.net>

        * improved QPicture stuff (fixes and new smart caching method)

        * KoHTML now uses the new window caption handling in OP

Thu Jan 14 22:11:14 1999 Simon Hausmann <tronical@gmx.net>

        * fixes (for example that error dialog now doesn't pop up anymore on startup)

        * rearranged menu

Tue Jan 19 19:27:51 1999 Simon Hausmann <tronical@gmx.net>

        * added nice open url dialog (file menu)

        * tiny fix in the html editor

        * started implementing cache system

        * fixes with the configuration stuff

        * several bug fixes I forgot ;-)