@@ -1,4 +1,3 @@
 - saving/loading of the complete html code, including frames and
   images
 - improve settings dialog
-- disable image caching in khtml and "move" this to kohtmljob :-)
