@@ -35,11 +35,8 @@
 
 #include "kfileio.h"
 
-bool KoHTMLJob::m_sbEnableCache = true;
-QCache<QString> *KoHTMLJob::s_jobCache;
-
 KoHTMLJob::KoHTMLJob(KHTMLView *_topParent, KHTMLView *_parent, const char *_url, JobType _jType)
-:KIOJob()
+:CachedKIOJob()
 {
   m_pTopParent = _topParent;
   m_pParent = _parent;
@@ -82,35 +79,17 @@ KoHTMLJob::~KoHTMLJob()
   
 void KoHTMLJob::start()
 {
-  if (m_sbEnableCache) m_bIsCached = (s_jobCache->find( m_strURL, false ));
-  else m_bIsCached = false;
-
   if (m_eJType == Image) copy(m_strURL.data(), m_strTmpFile.data());
   else 
     {
-      if (m_bIsCached)
-         {
-	   cerr << "CACHED!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!" << endl;
-	   m_strHTML = s_jobCache->find( m_strURL )->data();
-	   m_htmlLen = m_strHTML.length();
-           emit jobDone(this, m_pTopParent, m_pParent, m_strURL.data(), m_strHTML.data(), m_htmlLen);
-	   return;
-	 }
-	 
       if (m_bIsHTTP)
-         get(m_strURL.data());
+         get(m_strURL.data(), false);
       else	 
          {
 	   m_strTmpFile = tmpnam(0);
 	   copy(m_strURL.data(), m_strTmpFile.data());
 	 }
     }  
-}
-
-void KoHTMLJob::initStatic()
-{
-  if (!s_jobCache)
-    s_jobCache = new QCache<QString>(2048); // note: 2048 is the default cache size
 }
 
 void KoHTMLJob::slotJobFinished()
@@ -135,8 +114,6 @@ void KoHTMLJob::slotJobFinished()
 	      }      
 	 }
 	
-       if (m_sbEnableCache) s_jobCache->insert( m_strURL, new QString( m_strHTML ), m_sizeInKBytes);
-	 
        emit jobDone(this, m_pTopParent, m_pParent, m_strURL.data(), m_strHTML.data(), m_htmlLen);
      }      
 }
@@ -144,7 +121,6 @@ void KoHTMLJob::slotJobFinished()
 void KoHTMLJob::slotJobRedirection(int id, const char *_url)
 {
   m_strURL = _url;
-  start();
 }
 
 void KoHTMLJob::slotJobData(int id, const char *data, int len)
