@@ -29,7 +29,6 @@
 
 #include <qlayout.h>
 
-#include <kintegerline.h>
 #include <klined.h>
 
 #include "kproptext.h"
@@ -51,9 +50,6 @@ SettingsDlg::SettingsDlg()
   colorsFrame = addPage(-1, i18n("Colors"));
   setupColorsTab();
 
-  cacheFrame = addPage(-1, i18n("Cache"));
-  setupCacheTab();
-  
   emit getConfig();
 
   setMinimumSize(600, 250);
@@ -148,27 +144,4 @@ void SettingsDlg::setupColorsTab()
   KPropColor *vlnkColor = new KPropColor(colorsFrame, i18n("Followed Link Color"), 50, magenta, "VLinkColor", "Colors");
   connectConfig(vlnkColor);
   layout->addWidget(vlnkColor);  
-}
-
-void SettingsDlg::setupCacheTab()
-{
-  QVBoxLayout *layout = new QVBoxLayout(cacheFrame, 4);
-  
-  QLabel *l = new QLabel(i18n(""
-  "The cache is used to keep local copies of frequently used documents\n"
-  "and thus reduce time connected to the network. To load documents from\n"
-  "the network instead of the cache, click the reload button."
-  ""), cacheFrame);
-  layout->addWidget( l );  
-  
-  KPropText *memoryCache = new KPropText(cacheFrame, i18n("Memory Cache (kBytes) :"), 30, "MemoryCacheSize", "Cache Settings");
-  connectConfig(memoryCache);
-
-  if (QString(memoryCache->getContents()).isEmpty())
-     memoryCache->setContents("2048");
-
-  KIntegerLine *integerLine = new KIntegerLine( memoryCache );
-  memoryCache->setLineEdit( integerLine );
-  
-  layout->addWidget( memoryCache );
 }
